designer section image responsive

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                             design assistant. Explore new dimensions of desig</p>
                     </div>
                     <div class="col-md-4 col-xl-6 content-middle">
-                        <img src="/images/homepage/hexa-vector.svg" alt="hexa vector">
+                        <img class="hexa__img" src="/images/homepage/hexa-vector.svg" alt="hexa vector">
 
                         <!-- <canvas id="canvas" ></canvas> -->
                     </div>
