--- a/icon.html
+++ b/icon.html
@@ -5,131 +5,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animated Icosahedron</title>
     <style>
-       * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-body {
-  background: #000;
-  color: #fff;
-}
-
-.timeline-section {
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  padding: 80px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.content{
-    width: 100%;
-}
-.content h1 {
-  font-size: 120px;
-  font-weight: 700;
-}
-
-.content h2 {
-  font-size: 28px;
-  margin-top: 10px;
-}
-
-.content p {
-  color: #aaa;
-  margin-top: 5px;
-  font-size: 16px;
-}
-
-.line-wrapper {
-  position: relative;
-  margin-top: 50px;
-  display: flex;
-  align-items: center;
-}
-
-.horizontal-line {
-  height: 2px;
-  width: 100%;
-  background: #fff;
-}
-
-.circle-images {
-  display: flex;
-  position: absolute;
-  left: 0;
-  transform: translateX(-10px);
-}
-
-.circle-images img {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  border: 3px solid #000;
-  object-fit: cover;
-  margin-left: -15px;
-  background: #fff;
-}
-
-.dot {
-  width: 14px;
-  height: 14px;
-  background: #a64b2a;
-  border-radius: 50%;
-  position: absolute;
-  left: 140px;
-  top: -25px;
-}
-
-.vertical-line {
-  width: 2px;
-  height: 180px;
-  background: #fff;
-  position: relative;
-}
-
-.vertical-line::after,
-.vertical-line::before {
-  content: "";
-  width: 10px;
-  height: 10px;
-  border: 2px solid #fff;
-  position: absolute;
-  right: -5px;
-  top: 50%;
-  transform: translateY(-50%) rotate(45deg);
-}
-
+        body {
+            margin: 0;
+            background-color: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+        }
+        canvas {
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
 
-<section class="timeline-section">
-  <div class="content">
-    <h1>2014</h1>
-    <h2>Year of establishment</h2>
-    <p>More than 10 years in the field</p>
-
-    <div class="line-wrapper">
-      <div class="circle-images">
-        <img src="/images/homepage/client1.svg" alt="client1">
-        <img src="/images/homepage/client2.svg" alt="client2">
-        <img src="/images/homepage/client3.svg" alt="client3">
-      </div>
-      <span class="dot"></span>
-      <div class="horizontal-line"></div>
-    </div>
-  </div>
-
-  <div class="vertical-line"></div>
-</section>
+<canvas id="canvas"></canvas>
 
 <script>
-   
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+
+    let width, height;
+    let angleX = 0;
+    let angleY = 0;
+
+    // Icosahedron constants
+    const phi = (1 + Math.sqrt(5)) / 2; // The Golden Ratio
+    const scale = 120; // Size of the icon
+
+    // 1. Define the 12 vertices of an icosahedron
+    const vertices = [
+        [-1,  phi, 0], [ 1,  phi, 0], [-1, -phi, 0], [ 1, -phi, 0],
+        [ 0, -1,  phi], [ 0,  1,  phi], [ 0, -1, -phi], [ 0,  1, -phi],
+        [ phi, 0, -1], [ phi, 0,  1], [-phi, 0, -1], [-phi, 0,  1]
+    ];
+
+    // 2. Determine edges by distance (connect vertices that are exactly 2 units apart)
+    const edges = [];
+    for (let i = 0; i < vertices.length; i++) {
+        for (let j = i + 1; j < vertices.length; j++) {
+            const dx = vertices[i][0] - vertices[j][0];
+            const dy = vertices[i][1] - vertices[j][1];
+            const dz = vertices[i][2] - vertices[j][2];
+            const dist = Math.sqrt(dx*dx + dy*dy + dz*dz);
+            if (Math.abs(dist - 2) < 0.1) {
+                edges.push([i, j]);
+            }
+        }
+    }
+
+    function resize() {
+        width = canvas.width = window.innerWidth;
+        height = canvas.height = window.innerHeight;
+    }
+
+    function rotate(vertex, ax, ay) {
+        let [x, y, z] = vertex;
+
+        // Rotate around Y axis
+        let cosY = Math.cos(ay), sinY = Math.sin(ay);
+        let x1 = x * cosY - z * sinY;
+        let z1 = x * sinY + z * cosY;
+
+        // Rotate around X axis
+        let cosX = Math.cos(ax), sinX = Math.sin(ax);
+        let y2 = y * cosX - z1 * sinX;
+        let z2 = y * sinX + z1 * cosX;
+
+        return [x1, y2, z2];
+    }
+
+    function project(vertex) {
+        // Simple orthographic projection
+        return {
+            x: width / 2 + vertex[0] * scale,
+            y: height / 2 + vertex[1] * scale
+        };
+    }
+
+    function draw() {
+        ctx.clearRect(0, 0, width, height);
+        
+        // Update rotation
+        angleX += 0.01;
+        angleY += 0.015;
+
+        const projectedVertices = vertices.map(v => {
+            const rotated = rotate(v, angleX, angleY);
+            return project(rotated);
+        });
+
+        // Draw Edges
+        ctx.beginPath();
+        ctx.strokeStyle = '#ffffff';
+        ctx.lineWidth = 1.5;
+        ctx.lineJoin = 'round';
+
+        edges.forEach(edge => {
+            const v1 = projectedVertices[edge[0]];
+            const v2 = projectedVertices[edge[1]];
+            ctx.moveTo(v1.x, v1.y);
+            ctx.lineTo(v2.x, v2.y);
+        });
+
+        ctx.stroke();
+        requestAnimationFrame(draw);
+    }
+
+    window.addEventListener('resize', resize);
+    resize();
+    draw();
 </script>
 
 </body>
