minor asset optimize

--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
                             <p>Alot of projects are done</p>
                             <div class="img__decor img__decor--top">
                                 <div class="overlap__imgs">
-                                    <img src="/images/homepage/project1.svg" alt="project 1">
-                                    <img src="/images/homepage/project2.svg" alt="project 2">
-                                    <img src="/images/homepage/project1.svg" alt="project 3">
+                                    <img loading="lazy" src="/images/homepage/project1.svg" alt="project 1">
+                                    <img loading="lazy" src="/images/homepage/project2.svg" alt="project 2">
+                                    <img loading="lazy" src="/images/homepage/project1.svg" alt="project 3">
                                 </div>
                                 <div class="horizontal__line"></div>
                                 <div class="vertical__line"></div>
@@ -217,9 +217,9 @@
                             <p>These people love us</p>
                             <div class="img__decor img__decor--bottom">
                                 <div class="overlap__imgs">
-                                    <img src="/images/homepage/client6.svg" alt="client 6">
-                                    <img src="/images/homepage/client7.svg" alt="client 7">
-                                    <img src="/images/homepage/client8.svg" alt="client 8">
+                                    <img loading="lazy" src="/images/homepage/client6.svg" alt="client 6">
+                                    <img loading="lazy" src="/images/homepage/client7.svg" alt="client 7">
+                                    <img loading="lazy" src="/images/homepage/client8.svg" alt="client 8">
                                 </div>
                                 <div class="horizontal__line"></div>
                                 <div class="vertical__line"></div>
@@ -233,9 +233,9 @@
                             <p>What we do right now </p>
                             <div class="img__decor img__decor--top">
                                 <div class="overlap__imgs">
-                                    <img src="/images/homepage/work1.svg" alt="work1">
-                                    <img src="/images/homepage/work2.svg" alt="work2">
-                                    <img src="/images/homepage/work3.svg" alt="work3">
+                                    <img loading="lazy" src="/images/homepage/work1.svg" alt="work1">
+                                    <img loading="lazy" src="/images/homepage/work2.svg" alt="work2">
+                                    <img loading="lazy" src="/images/homepage/work3.svg" alt="work3">
                                 </div>
                                 <div class="horizontal__line"></div>
                                 <div class="vertical__line"></div>
@@ -578,9 +578,8 @@
         crossorigin="anonymous"></script>
 
     <!-- Your scripts -->
-    <script src="js/animations.js"></script>
     <script src="js/main.js"></script>
 
 </body>
 
-</htm
+</html>
