--- a/index.html
+++ b/index.html
@@ -510,7 +510,9 @@
                             <h2><b>Ready to Design Smarter?</b></h2>
                             <p>Whether you're a freelancer, a team, or a growing agency—our tools adapt to your
                                 workflow. Design faster. Deliver better.</p>
-                            <a href="#" class="btn__primary btn__arrow">Get Started</a>
+                                <div class="d-flex justify-content-center">
+                                    <a href="#" class="btn__primary btn__arrow">Get Started</a>
+                                </div>
                         </div>
                     </div>
                 </div>
