--- a/index.html
+++ b/index.html
@@ -548,9 +548,9 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
-                    <h4 class="color-primary">Useful Links</h4>
+                    <h4 class="color-primary">Connect With Us</h4>
                     <ul>
-                        <li><a href="#">27 Division St, New York, NY 10002, USA</a></li>
+                        <li><a href="#">27 Division St, New York, NY 10002, USA</a></li>
                         <li><a href="tel:+1233242653">+123 324 2653</a></li>
                         <li><a href="mailto:username@mail.com">username@mail.com</a></li>
                     </ul>
