--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <h1>
-                        Automate <span class="color-primary">Intelligence</span>.
+                        Automate <span class="color-primary marquee">Intelligence</span>. <br>
                         Accelerate Growth.
                     </h1>
                     <p>Our AI-powered SaaS platform empowers businesses to streamline operations, automate repetitive
@@ -574,10 +574,15 @@
 
     <!-- ScrollTrigger -->
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
+
+    <!-- TextPlugin -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/TextPlugin.min.js"></script>
+
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
 
     <!-- Your scripts -->
     <script src="js/main.js"></script>
